Replace zabbix_agent2.conf with an ansible template.

--- a/templates/etc/zabbix/zabbix_agent2.conf.j2
+++ b/templates/etc/zabbix/zabbix_agent2.conf.j2
@@ -1,9 +1,12 @@
+#
+# {{ ansible_managed }}
+#
+
 LogFile=/var/log/zabbix/zabbix_agent2.log
 LogFileSize=0
 Server=zabbix.pythonic.cafe
 ServerActive=zabbix.pythonic.cafe
-# PLEASE CHANGE Hostname
-Hostname=localhost
+Hostname={{ dbs_hostname }}
 Include=/etc/zabbix/zabbix_agent2.d/*.conf
 ControlSocket=/tmp/agent.sock
 Include=./zabbix_agent2.d/plugins.d/*.conf
